--- a/main.css
+++ b/main.css
@@ -14,10 +14,21 @@ nav {
 }
 
 footer {
-    color: white;
+    color: #ddd;
     background-color: #a0002a;
     text-align: center;
     padding: .5em
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+    border-bottom: #daa solid 1px;
+    transition: .3s;
+}
+
+a:hover {
+    border-color: #fff;
 }
 
 .input,
@@ -33,15 +44,6 @@ h2 {
 .graph {
     border: #a0002a solid;
     margin: 12px;
-}
-
-
-
-textarea {
-    /* width: 580px; */
-    /* padding: 4px; */
-    margin: 8px;
-    height: 330px;
 }
 
 #content {
@@ -75,6 +77,17 @@ textarea {
         max-width: 648px;
         margin: 0 auto;
     }
+}
+
+textarea {
+    box-sizing: border-box;
+    width: 100%;
+    resize: none;
+    padding: 4px;
+    margin: 0 ;
+    border: none;
+    border-top: #000 solid 1px;
+    height: 330px;
 }
 
 input {
