--- a/main.css
+++ b/main.css
@@ -77,6 +77,11 @@ h2 {
         max-width: 648px;
         margin: 0 auto;
     }
+
+    nav {
+        font-size: 1.5em;
+        padding: .5 em;
+    }
 }
 
 textarea {
