--- a/main.css
+++ b/main.css
@@ -33,7 +33,8 @@ a:hover {
 
 .input,
 .graph,
-nav {
+nav,
+footer {
     box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
 }
 
@@ -89,7 +90,7 @@ textarea {
     width: 100%;
     resize: none;
     padding: 4px;
-    margin: 0 ;
+    margin: 0;
     border: none;
     border-top: #000 solid 1px;
     height: 330px;
