--- a/main.css
+++ b/main.css
@@ -85,7 +85,9 @@ h2 {
     }
 }
 
-textarea {
+#loopDiv, #setupDiv {
+    font-family: monospace;
+    font-size: large;
     box-sizing: border-box;
     width: 100%;
     resize: none;
@@ -96,7 +98,28 @@ textarea {
     height: 330px;
     border-radius: 0;
 }
-
+.comment{
+    color: green;
+}
 input {
     width: 6ch;
+}
+
+.plusminus {
+    margin: 5px 0;
+    padding: 0;
+    border-radius: 50%;
+    border: #333 solid 1px;
+    width: 24px;
+    height: 24px;
+    background-color: #ccc;
+    transition: 0s;
+}
+
+.plusminus:hover {
+    background-color: #aaa;
+}
+.plusminus:active{
+    background-color: #777;
+    transition: .1s;
 }
