--- a/main.css
+++ b/main.css
@@ -9,8 +9,12 @@ body {
 nav {
     color: white;
     background-color: #a0002a;
-    font-size: 2em;
     padding: 1em;
+}
+
+h1 {
+    font-weight: normal;
+    font-size: 2em;
 }
 
 footer {
@@ -109,10 +113,12 @@ input {
     margin: 0;
     padding: 0;
 }
-#run_button{
+
+#run_button {
     position: relative;
     bottom: 0;
 }
+
 input[type="number"],
 .plusminus {
     width: 6ch;
