--- a/main.css
+++ b/main.css
@@ -7,10 +7,10 @@ body {
 }
 
 nav {
-    color: white;
+    color: #fff;
     background-color: #a0002a;
     padding: 1em;
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.75) !important;
+    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.75);
 }
 
 footer {
@@ -33,7 +33,6 @@ a:hover {
 
 .input,
 .graph,
-nav,
 footer {
     box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
 }
