--- a/main.css
+++ b/main.css
@@ -101,6 +101,7 @@ h2 {
     border: none;
     border-top: #000 solid 1px;
     height: 330px;
+    white-space: pre-wrap;
     border-radius: 0;
 }
 
